recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:21: error: Unmatched closing brace '}' ignored here
} 
^FourSquare:23: error: eof expected but '}' found.
}
^