recursion.lessons.recursion.square.FourSquare.scala.code
override  def run() {

var i=0
var k=0
def carre(){
	for(j<-0 to 4)
	
avance(100:Double)
droite(90:Double)
}

}

for(i<-0 to 4){
	carre()
	droite(90:Double)
	
}
}
}